# elterclick

./: .gitignore  README.md  build.sh  config.json  meson.build
dependencies/glad/src/: glad.c
dependencies/imgui/: imgui_impl_glfw.cpp
extra/glad/include/glad/: glad.h
src/: common.hpp  main.cpp
src/config/: config.cpp  config.hpp
src/gui/: gui.cpp  gui.hpp
src/input/: input.cpp  input.hpp
subprojects/: sdl2.wrap
